// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldName renders a custom description icon 1`] = `
<div
  class="euiFlexGroup css-ddu7vs-euiFlexGroup-s-flexStart-flexStart-row"
>
  <div
    class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup kbnDocViewer__fieldIconContainer css-dhjvmj-euiFlexGroup-s-flexStart-center-row"
    >
      <div
        class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      >
        <span
          class="euiToken kbnFieldIcon css-2lvpo4-euiToken-square-light-s-euiColorVis1"
        >
          <span
            data-euiicon-type="tokenString"
            title="String"
          >
            String
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem css-9sbomz-euiFlexItem-grow-1"
  >
    <div
      class="euiFlexGroup css-lqqg1w-euiFlexGroup-wrap-none-flexStart-center-row"
    >
      <div
        class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll css-kpsrin-euiFlexItem-growZero"
        data-test-subj="tableDocViewRow-test-name"
      >
        <span
          class="euiToolTipAnchor eui-textBreakAll css-jcaat8-euiToolTipAnchor-inlineBlock"
        >
          <span>
            test
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldName renders a geo field 1`] = `
<div
  class="euiFlexGroup css-ddu7vs-euiFlexGroup-s-flexStart-flexStart-row"
>
  <div
    class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup kbnDocViewer__fieldIconContainer css-dhjvmj-euiFlexGroup-s-flexStart-center-row"
    >
      <div
        class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      >
        <span
          class="euiToken kbnFieldIcon css-nelz4y-euiToken-square-light-s-euiColorVis5"
        >
          <span
            data-euiicon-type="tokenGeo"
            title="Geo point"
          >
            Geo point
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem css-9sbomz-euiFlexItem-grow-1"
  >
    <div
      class="euiFlexGroup css-lqqg1w-euiFlexGroup-wrap-none-flexStart-center-row"
    >
      <div
        class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll css-kpsrin-euiFlexItem-growZero"
        data-test-subj="tableDocViewRow-test.test.test-name"
      >
        <span
          class="euiToolTipAnchor eui-textBreakAll css-jcaat8-euiToolTipAnchor-inlineBlock"
        >
          <span>
            test.test.test
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldName renders a number field by providing a field record 1`] = `
<div
  class="euiFlexGroup css-ddu7vs-euiFlexGroup-s-flexStart-flexStart-row"
>
  <div
    class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup kbnDocViewer__fieldIconContainer css-dhjvmj-euiFlexGroup-s-flexStart-center-row"
    >
      <div
        class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      >
        <span
          class="euiToken kbnFieldIcon css-126yzfz-euiToken-square-light-s-euiColorVis0"
        >
          <span
            data-euiicon-type="tokenNumber"
            title="Number"
          >
            Number
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem css-9sbomz-euiFlexItem-grow-1"
  >
    <div
      class="euiFlexGroup css-lqqg1w-euiFlexGroup-wrap-none-flexStart-center-row"
    >
      <div
        class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll css-kpsrin-euiFlexItem-growZero"
        data-test-subj="tableDocViewRow-test.test.test-name"
      >
        <span
          class="euiToolTipAnchor eui-textBreakAll css-jcaat8-euiToolTipAnchor-inlineBlock"
        >
          <span>
            test.test.test
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldName renders a string field by providing fieldType and fieldName 1`] = `
<div
  class="euiFlexGroup css-ddu7vs-euiFlexGroup-s-flexStart-flexStart-row"
>
  <div
    class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup kbnDocViewer__fieldIconContainer css-dhjvmj-euiFlexGroup-s-flexStart-center-row"
    >
      <div
        class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      >
        <span
          class="euiToken kbnFieldIcon css-2lvpo4-euiToken-square-light-s-euiColorVis1"
        >
          <span
            data-euiicon-type="tokenString"
            title="String"
          >
            String
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem css-9sbomz-euiFlexItem-grow-1"
  >
    <div
      class="euiFlexGroup css-lqqg1w-euiFlexGroup-wrap-none-flexStart-center-row"
    >
      <div
        class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll css-kpsrin-euiFlexItem-growZero"
        data-test-subj="tableDocViewRow-test-name"
      >
        <span
          class="euiToolTipAnchor eui-textBreakAll css-jcaat8-euiToolTipAnchor-inlineBlock"
        >
          <span>
            test
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldName renders unknown field 1`] = `
<div
  class="euiFlexGroup css-ddu7vs-euiFlexGroup-s-flexStart-flexStart-row"
>
  <div
    class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup kbnDocViewer__fieldIconContainer css-dhjvmj-euiFlexGroup-s-flexStart-center-row"
    >
      <div
        class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      >
        <span
          class="euiToken kbnFieldIcon css-1uwaxbd-euiToken-circle-light-s-gray"
        >
          <span
            data-euiicon-type="questionInCircle"
            title="Unknown field"
          >
            Unknown field
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem css-9sbomz-euiFlexItem-grow-1"
  >
    <div
      class="euiFlexGroup css-lqqg1w-euiFlexGroup-wrap-none-flexStart-center-row"
    >
      <div
        class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll css-kpsrin-euiFlexItem-growZero"
        data-test-subj="tableDocViewRow-test.test.test-name"
      >
        <span
          class="euiToolTipAnchor eui-textBreakAll css-jcaat8-euiToolTipAnchor-inlineBlock"
        >
          <span>
            test.test.test
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldName renders when mapping is provided 1`] = `
<div
  class="euiFlexGroup css-ddu7vs-euiFlexGroup-s-flexStart-flexStart-row"
>
  <div
    class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup kbnDocViewer__fieldIconContainer css-dhjvmj-euiFlexGroup-s-flexStart-center-row"
    >
      <div
        class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      >
        <span
          class="euiToken kbnFieldIcon css-126yzfz-euiToken-square-light-s-euiColorVis0"
        >
          <span
            data-euiicon-type="tokenNumber"
            title="Number"
          >
            Number
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem css-9sbomz-euiFlexItem-grow-1"
  >
    <div
      class="euiFlexGroup css-lqqg1w-euiFlexGroup-wrap-none-flexStart-center-row"
    >
      <div
        class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll css-kpsrin-euiFlexItem-growZero"
        data-test-subj="tableDocViewRow-test-name"
      >
        <span
          class="euiToolTipAnchor eui-textBreakAll css-jcaat8-euiToolTipAnchor-inlineBlock"
        >
          <span>
            bytes
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldName renders with a search highlight 1`] = `
<div
  class="euiFlexGroup css-ddu7vs-euiFlexGroup-s-flexStart-flexStart-row"
>
  <div
    class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup kbnDocViewer__fieldIconContainer css-dhjvmj-euiFlexGroup-s-flexStart-center-row"
    >
      <div
        class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      >
        <span
          class="euiToken kbnFieldIcon css-126yzfz-euiToken-square-light-s-euiColorVis0"
        >
          <span
            data-euiicon-type="tokenNumber"
            title="Number"
          >
            Number
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem css-9sbomz-euiFlexItem-grow-1"
  >
    <div
      class="euiFlexGroup css-lqqg1w-euiFlexGroup-wrap-none-flexStart-center-row"
    >
      <div
        class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll css-kpsrin-euiFlexItem-growZero"
        data-test-subj="tableDocViewRow-test.test.test-name"
      >
        <span
          class="euiToolTipAnchor eui-textBreakAll css-jcaat8-euiToolTipAnchor-inlineBlock"
        >
          <span>
            <mark
              class="euiMark css-loqq4i-euiMark-hasScreenReaderHelpText"
            >
              te
            </mark>
            st.test.test
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
